--- a/.npmignore
+++ b/.npmignore
@@ -3,8 +3,7 @@
 /test-reports/
 junit.xml
 /coverage/
-/dist/changelog.md
-/dist/version.txt
+permissions-backup.acl
 /.mergify.yml
 /test/
 /tsconfig.dev.json
@@ -21,3 +20,7 @@ dist
 tsconfig.tsbuildinfo
 /.eslintrc.json
 !.jsii
+cdk.out
+cdk.context.json
+yarn-error.log
+coverage
