--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cdk-cf-constructs",
+  "description": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/neil.kuan/cdk-cf-constructs.git"
+    "url": "https://github.com/neilkuan/cdk-cf-constructs.git"
   },
   "scripts": {
     "build": "npx projen build",
-    "bump": "npx projen bump",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
     "compile": "npx projen compile",
@@ -17,21 +17,19 @@
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
-    "release": "npx projen release",
     "test": "npx projen test",
-    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
-    "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
   "author": {
     "name": "Neil Kuan",
-    "email": "neil.kuan@choco.media",
+    "email": "guan840912@gmail.com",
     "organization": false
   },
   "devDependencies": {
@@ -39,7 +37,9 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.44.0",
+    "aws-sdk-client-mock": "^2.0.0",
+    "aws-sdk-client-mock-jest": "^2.0.0",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -54,16 +54,24 @@
     "json-schema": "^0.4.0",
     "npm-check-updates": "^15",
     "projen": "^0.63.5",
-    "standard-version": "^9",
     "ts-jest": "^27",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.44.0",
     "constructs": "^10.0.5"
   },
+  "dependencies": {
+    "@aws-sdk/client-ec2": "^3.184.0",
+    "@types/aws-lambda": "^8.10.106",
+    "aws-lambda": "^1.0.7"
+  },
   "keywords": [
-    "cdk"
+    "awscdk",
+    "cdk",
+    "custom-resource",
+    "eip",
+    "lambda"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -109,10 +117,15 @@
     }
   },
   "types": "lib/index.d.ts",
-  "stability": "stable",
+  "stability": "experimental",
   "jsii": {
     "outdir": "dist",
-    "targets": {},
+    "targets": {
+      "python": {
+        "distName": "cdk-cf-constructs",
+        "module": "cdk_cf_constructs"
+      }
+    },
     "tsc": {
       "outDir": "lib",
       "rootDir": "src"
