--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "2.44.0",
-    "aws-sdk-client-mock": "^2.0.0",
-    "aws-sdk-client-mock-jest": "^2.0.0",
+    "aws-sdk-client-mock": "^3",
+    "aws-sdk-client-mock-jest": "^3",
     "constructs": "10.0.5",
     "esbuild": "^0.18.11",
     "eslint": "^8",
@@ -51,15 +51,16 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^27",
     "jest-junit": "^15",
-    "jsii": "1.x",
+    "jsii": "~5.0.0",
     "jsii-diff": "^1.84.0",
     "jsii-docgen": "^7.2.9",
     "jsii-pacmak": "^1.84.0",
+    "jsii-rosetta": "5.0.x",
     "npm-check-updates": "^16",
     "projen": "^0.71.120",
     "standard-version": "^9",
     "ts-jest": "^27",
-    "typescript": "^4.9.5"
+    "typescript": "4.9.5"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.44.0",
@@ -75,10 +76,6 @@
     "@types/aws-lambda",
     "aws-lambda"
   ],
-  "resolutions": {
-    "@types/babel__traverse": "7.18.2",
-    "@types/prettier": "2.6.0"
-  },
   "keywords": [
     "awscdk",
     "cdk",
