--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "^27",
+    "@types/jest": "^29",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
@@ -44,20 +44,20 @@
     "aws-sdk-client-mock": "^3",
     "aws-sdk-client-mock-jest": "^3",
     "constructs": "10.0.5",
-    "esbuild": "^0.19.10",
+    "esbuild": "^0.19.11",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "jest": "^27",
+    "jest": "^29",
     "jest-junit": "^15",
     "jsii": "~5.0.0",
     "jsii-diff": "^1.93.0",
     "jsii-docgen": "^7.2.9",
     "jsii-pacmak": "^1.93.0",
     "jsii-rosetta": "~5.0.0",
-    "projen": "^0.78.2",
+    "projen": "^0.78.10",
     "standard-version": "^9",
-    "ts-jest": "^27",
+    "ts-jest": "^29",
     "typescript": "4.9.5"
   },
   "peerDependencies": {
@@ -66,7 +66,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.363.0",
-    "@types/aws-lambda": "^8.10.130",
+    "@types/aws-lambda": "^8.10.131",
     "aws-lambda": "^1.0.7"
   },
   "bundledDependencies": [
@@ -117,11 +117,13 @@
         }
       ]
     ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
+    "transform": {
+      "^.+\\.[t]sx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json"
+        }
+      ]
     }
   },
   "types": "lib/index.d.ts",
