--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   },
   "devDependencies": {
     "@types/jest": "^29",
-    "@types/node": "^18",
+    "@types/node": "^20",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
-    "aws-cdk-lib": "2.44.0",
+    "aws-cdk-lib": "2.139.1",
     "aws-sdk-client-mock": "^3",
     "aws-sdk-client-mock-jest": "^3",
     "constructs": "10.0.5",
@@ -50,18 +50,18 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29",
     "jest-junit": "^15",
-    "jsii": "~5.0.0",
+    "jsii": "5.3.x",
     "jsii-diff": "^1.98.0",
     "jsii-docgen": "^7.2.9",
     "jsii-pacmak": "^1.98.0",
-    "jsii-rosetta": "~5.0.0",
+    "jsii-rosetta": "5.3.x",
     "projen": "^0.81.5",
     "standard-version": "^9",
     "ts-jest": "^29",
-    "typescript": "4.9.5"
+    "typescript": "^5"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.44.0",
+    "aws-cdk-lib": "^2.139.1",
     "constructs": "^10.0.5"
   },
   "dependencies": {
@@ -81,6 +81,9 @@
     "eip",
     "lambda"
   ],
+  "engines": {
+    "node": ">= 20.10.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
